--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -339,6 +339,7 @@
                 
                 <p style="color: darkorange;">{{errorMessage}}</p>
                 <label for="newSolventName">Name of solvent</label>
+                <!-- 0.5.0.4 checken op mogelijke error? -->
                 <input type="text"  id="newSolventName" ng-model="minMaxValues.name"   required/>
                 <label for="newSolventCasNr">Cas-number of solvent</label>
                 <input type="text" id="newSolventCasNr" name="regex"  ng-pattern="/^\d{2,6}-\d{2}-\d$/" ng-model="minMaxValues.casNumber" required/>
