--- a/UI-MVC/Content/Views/Analysis/Start.html
+++ b/UI-MVC/Content/Views/Analysis/Start.html
@@ -24,7 +24,7 @@
                     </div>
                     <h3>Canopy</h3>
                 </div>
-                <div class="col-lg-4 text-center" style="margin-top: 40px">
+                <div class="col-lg-4 text-center blur" style="margin-top: 40px">
                     <div class="box-icon rotate" id="KMeans" name="KMeans" ng-click="changeColor($event)">
                         <i class="fa fa-tachometer fa-4x"></i>
                     </div>
@@ -57,7 +57,7 @@
 
                 
 
-                <div class="col-lg-4 text-center" style="margin-top: 40px">
+                <div class="col-lg-4 text-center blur" style="margin-top: 40px">
                     <div class="box-icon rotate" id="EM" name="EM" ng-click="changeColor($event)">
                         <i class="fa fa-wrench fa-4x"></i>
                     </div>
