--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="~/Scripts/angular.js"></script>
     <script type="text/javascript" src="~/Scripts/angular-route.min.js"></script>
     <script type="text/javascript" src="~/Scripts/angular-messages.min.js"></script>
-    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
     <script type="text/javascript" src="~/Scripts/angucomplete-alt.min.js"></script>
     <script type="text/javascript" src="~/Scripts/angular-bootstrap-switch.js"></script>
     <script src="//d3js.org/d3.v3.min.js"></script>
