--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -341,9 +341,9 @@
                 <p style="color: darkorange;">{{errorMessage}}</p>
                 <label for="newSolventName">Name of solvent</label>
                 <!-- 0.5.0.4 checken op mogelijke error? -->
-                <input type="text"  id="newSolventName" ng-model="solvent.name"   required/>
+                <input type="text"  id="newSolventName" ng-model="headerz.name"   required/>
                 <label for="newSolventCasNr">Cas-number of solvent</label>
-                <input type="text" id="newSolventCasNr" name="regex"  ng-pattern="/^\d{2,6}-\d{2}-\d$/" ng-model="solvent.casNumber" required/>
+                <input type="text" id="newSolventCasNr" name="regex"  ng-pattern="/^\d{2,6}-\d{2}-\d$/" ng-model="headerz.casNumber" required/>
                 <div>
                     <span style="color: darkorange;" ng-show="form.features.regex.$error.pattern">Not a valid CAS number!</span>
                     <table class="classify-solvent-table col-lg-12">
