--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -283,7 +283,9 @@
                         </div>
                     </div>
                 </div>
+                    <div ng-if="matrix" id="distanceMatrixDiv">
 
+                    </div>
             </div>
 
         </div>
