[0.6.0.2] Visual fixes for DistanceMatrix

--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -251,6 +251,9 @@
                                 </div>
                             </div>
                         </div>
+                            <div ng-if="matrix" id="distanceMatrixDiv" style="overflow-y:auto; overflow-x:auto">
+
+                            </div>
                     </div>
 
                     <div class="col-lg-4 col-md-4 padding-less">
@@ -282,10 +285,9 @@
                             </table>
                         </div>
                     </div>
+                        <!--Test-->
                 </div>
-                    <div ng-if="matrix" id="distanceMatrixDiv">
-
-                    </div>
+                    
             </div>
 
         </div>
