--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -10,12 +10,13 @@ body {
    
 }
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 12px;
+    height:12px;
 }
  
 /* Track */
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.7); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
@@ -24,8 +25,15 @@ body {
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(0,0,0,1); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.8); 
+    background: #b92ed1; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: #b92ed1; 
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0.3);
 }
 body {
    -webkit-font-smoothing: antialiased;
