--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -252,6 +252,7 @@
                             </div>
                         </div>
                             <div ng-if="matrix" id="distanceMatrixDiv" style="overflow-y:auto; overflow-x:auto">
+                                <i class="fa fa-times closecross" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
 
                             </div>
                     </div>
