--- a/UI-MVC/Content/Views/Analysis/Start.html
+++ b/UI-MVC/Content/Views/Analysis/Start.html
@@ -13,7 +13,7 @@
         <div class="padding-container" ng-if="algorithms===undefined">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="margin-top-0 text-primary wow fadeInDown">Select your algorithms</h1>
+                    <h1 class="margin-top-0 text-primary wow fadeInDown">Select your algorithm</h1>
                     <hr class="primary">
                 </div>
             </div>
@@ -24,24 +24,11 @@
                     </div>
                     <h3>Canopy</h3>
                 </div>
-                <div class="col-lg-4 text-center blur" style="margin-top: 40px">
-                    <div class="box-icon rotate" id="KMeans" name="KMeans" ng-click="changeColor($event)">
-                        <i class="fa fa-tachometer fa-4x"></i>
-                    </div>
-                    <h3>KMeans</h3>
-                </div>
-                <div class="col-lg-4 text-center blur" style="margin-top: 40px">
-                    <div class="box-icon rotate" id="Cobweb" name="Cobweb" ng-click="changeColor($event)">
-                        <i class="fa fa-shield fa-4x"></i>
-                    </div>
-                    <h3>Cobweb</h3>
-                </div>
-
+               
+                
                 
 
-            </div>
-
-            <div class="row">
+            
                 <div class="col-lg-4 text-center" style="margin-top: 40px">
                     <div class="box-icon rotate" id="XMeans" name="XMeans" ng-click="changeColor($event)">
                         <i class="fa fa-xing fa-4x"></i>
@@ -57,12 +44,6 @@
 
                 
 
-                <div class="col-lg-4 text-center blur" style="margin-top: 40px">
-                    <div class="box-icon rotate" id="EM" name="EM" ng-click="changeColor($event)">
-                        <i class="fa fa-wrench fa-4x"></i>
-                    </div>
-                    <h3>Expectation Maximization</h3>
-                </div>
 
             </div>
             <div>
