[0.6.0.5] Validation for uploading excel

--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -359,40 +359,39 @@
             <h2 class="margin-top-0 wow fadeInDown">Classify new solvent</h2>
             <hr class="primary">
         </div>
-        <a href="#" class="xs-button absolute-button" ng-click="triggerUpload()">Upload csv</a>
-        <input type="file" id="csvFileUpload" accept=".csv" name="csvFileUpload" ng-model="csvFile" style="display: none" file-change="getFile($event,files)" />
+        <a href="{{ url }}" ng-if="download" download="template.csv" class="button" ng-click="triggerDownload()">Download template</a>
 
-        <a href="#" download="template.csv" class="button" ng-click="triggerDownload()">Download template</a>
+        <a href="#" class="button" ng-click="triggerUpload()">Upload csv</a>
+        <input ng-if="upload" type="file" id="csvFileUpload" accept=".csv" name="csvFileUpload" ng-model="csvFile" style="display: none" file-change="getFile($event,files)" />
 
         <form role="form" name="form.features" id="newSolvent" ng-submit="newSolvent()" novalidate>
            <div>   
               <p style="color: darkorange;">{{errorMessage}}</p>
                 <div>
-                    <span style="color: darkorange;" ng-show="form.features.regex.$error.pattern">Not a valid CAS number!</span>
+                    <!--<span style="color: darkorange;" ng-show="form.features.regex.$error.pattern">Not a valid CAS number!</span>-->
                     
-                    <table class="classify-solvent-table col-lg-12" ng-if="headerz && headerz.length>0">
+                    <table id="table" class="classify-solvent-table col-lg-12" ng-if="headerz && headerz.length>0" >
                         <tr style="padding-bottom: 10px;">
                             <th class="col-lg-7">Feature name</th>
                             <th class="col-lg-3" style="padding-left: 20%; padding-bottom: 12px">Value</th>
                         </tr>
                         <tr ng-repeat="metadata in headerz[0]">
                             <td class="col-lg-7">{{metadata.MetaDataName}}</td>
-
-
                             <td class="classify-solvent-row col-lg-4">
-                                <input class="feature-input" type="text" ng-change="SetStyle($index)" id="feature_{{$index}}" title="{{$index}}" name="feature_{{$index}}" ng-model="metadata.value" required />
-                            </td>
+                                <input class="feature-input" type="text" ng-change="SetStyle($index); validateMetaData(metadata)" id="metadata_{{$index}}" title="{{$index}}" name="metadata_{{$index}}" ng-model="metadata.value" required />
+                           </td>
+                           <td><p ng-if="validation[$index]" style="color: darkorange;">{{errorMessageMeta}}</p>
                         </tr>
                         <tr ng-repeat="feature in headerz[1]">
                             <td class="col-lg-7">{{feature.FeatureName}}</td>
-
-
                             <td class="classify-solvent-row col-lg-4">
-                                <input class="feature-input" type="text" ng-change="SetStyle($index)" id="feature_{{$index}}" title="{{$index}}" name="feature_{{$index}}" ng-model="feature.value" required/>
+                                <input class="feature-input" type="text" ng-change="SetStyle($index); validateFeatureData(feature, $index)" id="feature_{{$index}}" title="{{$index}}" name="feature_{{$index}}" ng-model="feature.value" required/>
                             </td>
-                        </tr>
+<td><p ng-if="validation[$index+9]" style="color: darkorange;">{{errorMessageFeature}}</p></td>
+</tr>
                     </table>
-                    <button type="submit" from="features" name="submit" id="load" class="small-button" ng-class="{disabledForm: !valid}" tabindex="-1"  data-loading-text="<i class='fa fa-spinner fa-spin fa-fw'></i>Classifying...">Classify solvent</button>
+                    <a class="small-button" ng-if="check" ng-click="validateAll(headerz)">check values</a>
+                    <button ng-if="classify" type="submit" from="features" name="submit" id="load" class="small-button" ng-class="{disabledForm: !valid}" tabindex="-1"  data-loading-text="<i class='fa fa-spinner fa-spin fa-fw'></i>Classifying...">Classify solvent</button>
 
                 </div>
 
