--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -252,39 +252,45 @@
 
                     <div class="col-lg-4 col-md-4 padding-less">
                         <div class="grid grid-right col-lg-12" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px;">
-                            <a href="#" class="button" style="width:35%; height:60px; line-height:2; :left; text-align:center; font-size:14px; padding:0;" ng-click="showSolventInfo()">Solvent Details</a>
-                            <a href="#" class="button" style="width:35%; height:60px; line-height:2; float:right; text-align:center; font-size:14px; padding:0;" ng-click="showChemPic()">Chemical Structure</a>
-                            <div class="SolventDetails" id="solventDetailsDiv" style="visibility:visible; z-index:5000;">
-                                <h3 class="text-primary text-center" ng-if="selectedCluster === undefined">Solvent Details</h3>
-                                <h3 class="text-primary text-center" ng-if="selectedCluster !== undefined">Cluster Solvents</h3>
-
-                                <div class="classified-solvent-alt" ng-if="selectedSolvent === undefined && selectedCluster === undefined">
-                                    <p style="margin-top: 140px; color:rgba(80,80,80,1)">No solvent selected</p>
+                            <div style="float:left">
+                                <a href="#" class="button" style="width:90%; height:60px; line-height:60px; text-align:center; font-size:14px; padding:0;" ng-click="showSolventInfo()">Solvent Details</a>
+                            </div>
+                            <div style="float:right">
+                                <a href="#" class="button" style="width:90%; height:60px; line-height:60px; text-align:center; font-size:14px; padding:0;" ng-click="showChemPic()">Chemical Structure</a>
                                 </div>
-
-                                <h4 ng-if="selectedSolvent && selectedCluster === undefined" style="margin-top: 25px;">Solvent: {{selectedSolvent.Name}}</h4>
-                                <table ng-if="selectedSolvent">
-                                    <tr>
-                                        <th style="padding-left: 15px">Feature name</th>
-                                        <th style="padding-left: 15px">Value</th>
-                                    </tr>
-                                    <tr ng-repeat="feature in selectedSolvent.Features" ng-if="selectedCluster === undefined">
-                                        <td style="padding-left: 15px">{{feature.featureName}}</td>
-                                        <td style="padding-left: 15px">{{feature.value}}</td>
-                                    </tr>
-                                </table>
-
-                                <table ng-if="selectedCluster">
-                                    <tr ng-repeat="solvent in selectedCluster.Solvents | orderBy:'Name'" ng-if="selectedCluster !== undefined">
-                                        <td style="padding-left: 15px">- {{solvent.Name}}</td>
-
-                                    </tr>
-                                </table>
+                            <div class="clear" style="clear:both">
                             </div>
-                            <div class="ChemSolPic" id="ChemSolPicDiv" style="visibility:collapse; padding:0; margin: 0; z-index:5001;">
-                                <iframe style="width: 80%; height: 30%;" frameborder="0" src="https://embed.molview.org/v1/?mode=balls&cid=5562578"></iframe>
+                                <div class="SolventDetails" id="solventDetailsDiv" style="display:normal;">
+                                    <h3 class="text-primary text-center" ng-if="selectedCluster === undefined">Solvent Details</h3>
+                                    <h3 class="text-primary text-center" ng-if="selectedCluster !== undefined">Cluster Solvents</h3>
+
+                                    <div class="classified-solvent-alt" ng-if="selectedSolvent === undefined && selectedCluster === undefined">
+                                        <p style="margin-top: 140px; color:rgba(80,80,80,1)">No solvent selected</p>
+                                    </div>
+
+                                    <h4 ng-if="selectedSolvent && selectedCluster === undefined" style="margin-top: 25px;">Solvent: {{selectedSolvent.Name}}</h4>
+                                    <table ng-if="selectedSolvent">
+                                        <tr>
+                                            <th style="padding-left: 15px">Feature name</th>
+                                            <th style="padding-left: 15px">Value</th>
+                                        </tr>
+                                        <tr ng-repeat="feature in selectedSolvent.Features" ng-if="selectedCluster === undefined">
+                                            <td style="padding-left: 15px">{{feature.featureName}}</td>
+                                            <td style="padding-left: 15px">{{feature.value}}</td>
+                                        </tr>
+                                    </table>
+
+                                    <table ng-if="selectedCluster">
+                                        <tr ng-repeat="solvent in selectedCluster.Solvents | orderBy:'Name'" ng-if="selectedCluster !== undefined">
+                                            <td style="padding-left: 15px">- {{solvent.Name}}</td>
+
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="ChemSolPic" id="ChemSolPicDiv" style="display:none; padding:0; margin: 0;">
+                                    <iframe style="width:100%; height:50%;" frameborder="0" ng-src="{{trustSrc(cidurl)}}" alt="Description"></iframe>
+                                </div>
                             </div>
-                        </div>
                         
                     </div>
                         <!--Test-->
