admin screen changes

--- a/UI-MVC/Content/Views/Account/Admin.html
+++ b/UI-MVC/Content/Views/Account/Admin.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6  padding-less" >
+            <div class="col-lg-4  padding-less" >
                 <div class="admin-card col-lg-12 col-md-12" >
                     <p class="admin-card-title">User Administration</p>
                     <div id="chartCont-users" class="chart-container-fullwidth" style="overflow-y: auto; padding-bottom: 10px; padding-top: 20px;" >
@@ -116,7 +116,7 @@
 
                 </div>
             </div>
-            <div class="col-lg-6  padding-less">
+            <div class="col-lg-4  padding-less">
                 <div class="admin-card col-lg-12">
                     <p class="admin-card-title">Organisation administration</p>
                     <div id="chartCont-organisations" class="chart-container-admin" style="overflow-y: auto; width: 100%; overflow-x: hidden; padding-bottom: 10px; padding-top: 20px">
@@ -133,7 +133,26 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4  padding-less">
+                <div class="admin-card col-lg-12 col-md-12">
+                    <p class="admin-card-title">TRAINING SET ADMINISTRATION</p>
+                    <div id="chartCont-training" class="chart-container-fullwidth" style="overflow-y: auto; padding-bottom: 10px; padding-top: 20px;">
+                        <!--<div class="user-admin-row" ng-repeat="user in users">
+                            <div style="display: inline-block; float: left; padding-left: 40px; margin-top: 5px;">{{user.Email}}</div>
+                            <i class="fa fa-trash-o delete-usr-btn" aria-hidden="true" ng-click="deleteUser(user)"></i>
+                            <div class="onoffswitch" style="display: inline-block; float: right; margin-right: 10px;">
+                                <input type="checkbox" class="onoffswitch-checkbox" id="onoffswitch-{{user.Email}}" ng-model="user.LockoutEnabled" ng-click="changeUser(user)">
+                                <label class="onoffswitch-label" for="onoffswitch-{{user.Email}}">
+                                    <span class="onoffswitch-inner"></span>
+                                    <span class="onoffswitch-switch"></span>
+                                </label>
+                            </div>
+                        </div>-->
+                        <input type="button" class="small-button" value="test" />
+                    </div>
 
+                </div>
+            </div>
         </div>
 
 
