--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -1485,8 +1485,6 @@ form.ng-submitted .ng-valid {
   text-decoration: none;
 }
 
-
-
 .overlay {
     position: fixed;
     left: 0;
@@ -2000,6 +1998,22 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
 .not-visible {
     visibility: collapse;
     
+}
+.div-overlay-matrix {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+    background-color: rgb(25,25,25);
+    opacity: 0.97;
+    padding: 10px;
+    transition: all 0.4s ease-in-out, padding 1ms;
+}
+
+.not-visible-matrix {
+    visibility: collapse;
 }
 .closecross {
     font-size: 23px;
