--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -252,7 +252,7 @@
 
                     <div class="col-lg-4 col-md-4 padding-less" style="border:solid; border-color:black">
                             <div style="background-color: #{{selectedSolvent.EHS_Color_Code}}; position: absolute; top: 0; left: 0; height: 100%; width: 100%; opacity:0.4;"></div>
-                            <div class="grid grid-right col-lg-12" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
+                            <div class="grid grid-right col-lg-12" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
                                 <div style="float:left; width:40%; display: table; margin-top:5%;">
                                     <a href="#" class="button" id="ButSolvDet" style="width:90%; height:60px; display: table-cell; vertical-align: middle; text-align:center; font-size:21px; padding:0; background-color:#b92ed1;" ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
                                 </div>
