--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -244,13 +244,13 @@
                                 </div>
                             </div>
                         </div>
-                            <div id="distanceMatrixDiv" class="zui-wrapper">
-                                <i class="fa fa-times closecross" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
-                               <table class="zui-table zui-table-highlight-all" >
+                            <div id="distanceMatrixDiv" class="zui-wrapper" scroller>
+                                <i class="fa fa-times closecrossdis" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
+                               <table class="zui-table" >
                                    <thead id="zui-table-header">
 
                                    </thead>
-                                   <tbody id="zui-table-body" scroller>
+                                   <tbody id="zui-table-body">
 
                                    </tbody>
                                </table>
