--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -245,7 +245,7 @@
                             </div>
                         </div>
                             <div id="distanceMatrixDiv" class="zui-wrapper" scroller>
-                                <i class="fa fa-times closecrossdis" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
+                                <i class="fa fa-times closecrossdis" id="closecrossdis" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
                                <table class="zui-table" >
                                    <thead id="zui-table-header">
 
