--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-8 padding-less" style="width:100%; padding-top:1%;">
 
-                        <div class="grid grid-graph col-lg-12 text-center" id="chart-container-{{model.Model.AlgorithmName}}" style="width:62%; margin-right:2%; height:480px;">    
+                        <div class="grid grid-graph col-lg-12 text-center"  chart-container-{{model.Model.AlgorithmName}}" style="width:62%; margin-right:2%; height:480px;">    
                                 <div angucomplete-alt
                                      id="ex1"
                                      placeholder="Search solvent"
@@ -257,14 +257,14 @@
                             </div>
                         </div>
 
-                    <div class="col-lg-4 col-md-4 padding-less" style="border:solid; border-color:black">
-                            <div style="background-color: #{{selectedSolvent.EHS_Color_Code}}; position: absolute; top: 0; left: 0; height: 100%; width: 100%; opacity:0.4;"></div>
+                    <div class="col-lg-4 col-md-4 padding-less" id="rand"style="border:solid; border-color:black">
+                            <div style="background-color: #{{selectedSolvent.EHS_Color_Code}}; position: absolute; top: 0; left: 0; height: 100%; width: 100%; opacity:0.4;"id="ehskleur";></div>
                             <div class="grid grid-right col-lg-12" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
-                                <div style="float:left; width:40%; display: table; margin-top:5%;">
-                                    <a href="#" class="button" id="ButSolvDet" style="width:90%; height:60px; display: table-cell; vertical-align: middle; text-align:center; font-size:21px; padding:0; background-color:#b92ed1;" ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
+                                <div style="float:left; width:40%; margin-top:5%;">
+                                    <a href="#" class="button" id="ButSolvDet"  ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
                                 </div>
                                 <div style="float:right; width:40%; display: table; margin-top:5%;">
-                                    <a href="#" class="button" id="ButChemStruct" style="width:90%; height:60px; display: table-cell; vertical-align: middle; text-align:center; padding:0;" ng-click="showChemPic()"><h4 style="font-size:21px;">Chemical structure</h4></a>
+                                    <a href="#" class="button" id="ButChemStruct" ng-click="showChemPic()"><h4 style="font-size:21px;">Chemical structure</h4></a>
                                 </div>
                                 <div class="clear" style="clear:both;">
                                 </div>
