--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -265,6 +265,7 @@
                                 </div>
                                 <div style="float:right; width:40%; display: table; margin-top:5%;">
                                     <a href="#" class="button" id="ButChemStruct" ng-click="showChemPic()"><h4 style="font-size:21px;">Chemical structure</h4></a>
+                                  
                                 </div>
                                 <div class="clear" style="clear:both;">
                                 </div>
@@ -295,10 +296,16 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div class="ChemSolPic" id="ChemSolPicDiv" style="display:none; padding: 0; margin: 0;">
-                                    <h3 class="text-primary text-center" ng-if="selectedCluster === undefined">Chemical structure</h3>
+                                <div class="ChemSolPic" id="ChemSolPicDiv" style="display:none; padding: 0; margin: 0;">                                    
+                                    <a href="#" class="button" style="float:right;text-align:center;max-width:60px;" id="But3D" ng-click="showChemPic()"><h4 style="font-size:21px;">3D</h4></a>
+                                    <a href="#" class="button" style="float:right;text-align:center;max-width:60px;" id="But2D" ng-click="showPNG()"><h4 style="font-size:21px;">2D</h4></a>
+                                    <h3 class="text-primary text-center" style="float:left;"ng-if="selectedCluster === undefined">Chemical structure</h3>
                                     <div class="classified-solvent-alt" ng-if="selectedSolvent === undefined && selectedCluster === undefined">
                                         <p style="margin-top: 140px; color:rgba(80,80,80,1)">No solvent selected</p>
+                                    </div>
+                                    <div >
+                                    </div>
+                                    <div>
                                     </div>
                                     <iframe ng-if="selectedSolvent !== undefined" style="width:100%; height:50%;" frameborder="0" ng-src="{{trustSrc(cidurl)}}" alt="Description"></iframe>
                                 </div>
