--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -207,7 +207,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-8 padding-less" style="width:100%; padding-top:1%;">
 
-                        <div class="grid grid-graph col-lg-12 text-center"  chart-container-{{model.Model.AlgorithmName}}" style="width:62%; margin-right:2%; height:480px;">    
+                        <div class="grid grid-graph col-lg-12 text-center"  id="chart-container-{{model.Model.AlgorithmName}}" style="width:62%; margin-right:2%; height:480px;">    
                                 <div angucomplete-alt
                                      id="ex1"
                                      placeholder="Search solvent"
