--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -2611,4 +2611,10 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
 
 }
 
+#ChemSolPic2DImg {
+    width: 100%;
+    margin-top: -100px;
+
+}
+
 
