--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -275,8 +275,9 @@ footer {
   font-family: 'Questrial', 'Roboto';
   text-shadow: 0 1px rgba(0,0,0,0.1); 
   background-color: transparent;
-   /** padding: 21px 70px;*/
+   padding: 21px;
    max-width:180px;
+   height:75px;
   font-size: 20px;
   letter-spacing: 3px;
   border-radius: 6px;
@@ -290,6 +291,13 @@ footer {
   color: white;
     text-decoration: none;
 }
+#But2D, #But3D{
+    height:40px;
+    width:70px;
+    text-align:center;
+    padding-top:0px;
+}
+
 .button > a {
     color: white;
     text-decoration: none;
@@ -1354,6 +1362,7 @@ form.ng-submitted .ng-valid {
 #ButChemStruct, #ButSolvDet {
     max-width: 180px;
     text-align: center;
+    padding-top: 5px;
 }
 #ButSolvDet h4, #ButChemStruct h4 {
     height: 100%;
