--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -7,7 +7,14 @@ html,
 body {
     width: 100%;
     height: 100%;
-   
+}
+.classifyButtons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#uploadButton, #downloadButton{
+    width:100%
 }
 ::-webkit-scrollbar {
     width: 12px;
